--- a/VIT_Module/6-Python_Arayuz/UI_Files/candidates_ui.ui
+++ b/VIT_Module/6-Python_Arayuz/UI_Files/candidates_ui.ui
@@ -27,25 +27,6 @@
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0.489, y1:1, x2:0.494, y2:0, stop:0 rgba(71, 71, 71, 255), stop:1 rgba(255, 255, 255, 255));</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="1" rowspan="7" colspan="5">
-    <widget class="QTableWidget" name="tableWidget">
-     <property name="cursor" stdset="0">
-      <cursorShape>PointingHandCursor</cursorShape>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgba(0, 0, 0,0%);</string>
-     </property>
-     <property name="autoScrollMargin">
-      <number>16</number>
-     </property>
-     <attribute name="horizontalHeaderDefaultSectionSize">
-      <number>115</number>
-     </attribute>
-     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
-      <bool>true</bool>
-     </attribute>
-    </widget>
-   </item>
    <item row="1" column="2" colspan="2">
     <widget class="QLabel" name="label">
      <property name="sizePolicy">
@@ -84,7 +65,7 @@
      </property>
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>150</width>
        <height>35</height>
       </size>
      </property>
@@ -124,42 +105,36 @@ QLineEdit:focus  {
      </property>
     </widget>
    </item>
-   <item row="7" column="0">
-    <widget class="QPushButton" name="pushButtonBackMenu">
-     <property name="minimumSize">
-      <size>
-       <width>0</width>
-       <height>35</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>200</width>
-       <height>16777215</height>
-      </size>
-     </property>
+   <item row="2" column="1" colspan="2">
+    <widget class="QLabel" name="labelCandidates">
      <property name="font">
       <font>
-       <family>Arial</family>
+       <family>Arial Black</family>
+       <pointsize>26</pointsize>
        <bold>true</bold>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">QPushButton{
-	border-radius : 15px;
-	background-color : rgb(25, 200, 200);
-	color: rgb(255, 255, 255);
-}
-
-QPushButton:hover{
-	background-color: rgb(20, 135, 135);
-	border: 2px solid rgb(255, 80, 0);
-}</string>
+      <string notr="true">background-color: rgba(0, 0, 0,0%);
+color: rgb(71, 84, 88);</string>
      </property>
      <property name="text">
-      <string>Back Menu</string>
+      <string>CANDIDATES MENU</string>
      </property>
     </widget>
+   </item>
+   <item row="9" column="0">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="1" column="1" alignment="Qt::AlignLeft|Qt::AlignTop">
     <widget class="QLabel" name="labelLogo_2">
@@ -192,24 +167,24 @@ QPushButton:hover{
      </property>
     </widget>
    </item>
-   <item row="9" column="0">
-    <spacer name="verticalSpacer">
+   <item row="1" column="4">
+    <spacer name="horizontalSpacer">
      <property name="orientation">
-      <enum>Qt::Vertical</enum>
+      <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
-       <width>20</width>
-       <height>40</height>
+       <width>40</width>
+       <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item row="5" column="0">
-    <widget class="QPushButton" name="pushButtonInterviewedApplicants">
+    <widget class="QPushButton" name="pushButtonInterviewedCandidates">
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>150</width>
        <height>35</height>
       </size>
      </property>
@@ -238,7 +213,44 @@ QPushButton:hover{
 }</string>
      </property>
      <property name="text">
-      <string>Interviewed Applicants</string>
+      <string>Interviewed Candidates</string>
+     </property>
+    </widget>
+   </item>
+   <item row="7" column="0">
+    <widget class="QPushButton" name="pushButtonBackMenu">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+	border-radius : 15px;
+	background-color : rgb(25, 200, 200);
+	color: rgb(255, 255, 255);
+}
+
+QPushButton:hover{
+	background-color: rgb(20, 135, 135);
+	border: 2px solid rgb(255, 80, 0);
+}</string>
+     </property>
+     <property name="text">
+      <string>Back Menu</string>
      </property>
     </widget>
    </item>
@@ -246,7 +258,7 @@ QPushButton:hover{
     <widget class="QPushButton" name="pushButtonExit">
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>150</width>
        <height>35</height>
       </size>
      </property>
@@ -279,19 +291,6 @@ QPushButton:hover{
      </property>
     </widget>
    </item>
-   <item row="1" column="4">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
    <item row="2" column="3" colspan="3">
     <widget class="QComboBox" name="comboBoxFilterOptions">
      <property name="styleSheet">
@@ -314,29 +313,11 @@ QComboBox:focus  {
      </property>
     </widget>
    </item>
-   <item row="2" column="1" colspan="2">
-    <widget class="QLabel" name="labelCandidates">
-     <property name="font">
-      <font>
-       <family>Arial Black</family>
-       <pointsize>26</pointsize>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgba(0, 0, 0,0%);
-color: rgb(71, 84, 88);</string>
-     </property>
-     <property name="text">
-      <string>CANDIDATES MENU</string>
-     </property>
-    </widget>
-   </item>
    <item row="4" column="0">
     <widget class="QPushButton" name="pushButtonGetCandidatess">
      <property name="minimumSize">
       <size>
-       <width>0</width>
+       <width>150</width>
        <height>35</height>
       </size>
      </property>
@@ -369,6 +350,25 @@ QPushButton:hover{
      </property>
     </widget>
    </item>
+   <item row="3" column="1" rowspan="7" colspan="5">
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="cursor" stdset="0">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgba(0, 0, 0,0%);</string>
+     </property>
+     <property name="autoScrollMargin">
+      <number>16</number>
+     </property>
+     <attribute name="horizontalHeaderDefaultSectionSize">
+      <number>115</number>
+     </attribute>
+     <attribute name="horizontalHeaderShowSortIndicator" stdset="0">
+      <bool>true</bool>
+     </attribute>
+    </widget>
+   </item>
    <item row="0" column="0" rowspan="3" colspan="2">
     <widget class="QLabel" name="labelPicture">
      <property name="sizePolicy">
@@ -397,11 +397,90 @@ QPushButton:hover{
      </property>
     </widget>
    </item>
+   <item row="6" column="0">
+    <widget class="QComboBox" name="comboBoxTrainees">
+     <property name="minimumSize">
+      <size>
+       <width>150</width>
+       <height>35</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>200</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="font">
+      <font>
+       <family>Arial</family>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QComboBox {
+    border-radius: 15px;
+    background-color: rgb(25, 200, 200);
+    color: rgb(255, 255, 255);
+    padding: 1px 18px 1px 3px;
+}
+
+QComboBox:placeholder {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+QComboBox::drop-down {
+    border: none;
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 15px;
+    border-left-width: 1px;
+    border-left-color: darkgray;
+    border-left-style: solid;
+    border-top-right-radius: 3px;
+    border-bottom-right-radius: 3px;
+}
+
+QComboBox::down-arrow {
+    width: 14px;
+    height: 14px;
+}
+
+QComboBox QAbstractItemView::item {
+    background-color: rgb(25, 200, 200);
+    color: rgb(255, 255, 255);
+}
+
+QComboBox QAbstractItemView {
+    border: 1px solid darkgray;
+    selection-background-color: rgb(20, 135, 135);
+    background-color: rgb(25, 200, 200);
+    border-radius: 15px;
+}
+
+QComboBox:hover {
+    background-color: rgb(20, 135, 135); /* QComboBox arka planı hover anında değişiyor */
+    border: 2px solid rgb(255, 80, 0); /* Hover ile kenar çizgisi ekleniyor */
+}
+
+QToolTip {
+ 	border-radius: 15px;
+	background-color: yellow; 
+	color: black; 
+	border: 1px solid black;
+}</string>
+     </property>
+     <property name="placeholderText">
+      <string>              Trainess </string>
+     </property>
+    </widget>
+   </item>
   </layout>
  </widget>
  <tabstops>
   <tabstop>lineEditSearch</tabstop>
-  <tabstop>pushButtonInterviewedApplicants</tabstop>
+  <tabstop>pushButtonInterviewedCandidates</tabstop>
   <tabstop>tableWidget</tabstop>
   <tabstop>comboBoxFilterOptions</tabstop>
   <tabstop>pushButtonBackMenu</tabstop>
